crates/iota/tests/snapshots/ptb_files_tests__make_move_vec.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭─────────────────────────────────────────────────────────────────────╮
│ PTB Preview                                                         │
├───────────────┬─────────────────────────────────────────────────────┤
│ command       │ values                                              │
├───────────────┼─────────────────────────────────────────────────────┤
│ make-move-vec │ <u64> [1u64, 2u64, 3u64, 4u64]                      │
│ make-move-vec │ <u64> []                                            │
│ make-move-vec │ <0x1::a::b> [@0x1, @0x2]                            │
│ make-move-vec │ <address> [@0x1, @0x2]                              │
│ make-move-vec │ <vector<address>> [vector[@0x1], vector[@0x2]]      │
│ make-move-vec │ <std::option::Option<u64>> [none, none]             │
│ make-move-vec │ <std::option::Option<u64>> [none, none]             │
│ make-move-vec │ <std::option::Option<u64>> [none, some(1u64)]       │
│ make-move-vec │ <std::option::Option<u64>> [none, some(some(1u64))] │
│ make-move-vec │ <iota::coin::Coin<iota::iota::IOTA>> [gas]              │
├───────────────┼─────────────────────────────────────────────────────┤
│ gas-budget    │ 1000                                                │
╰───────────────┴─────────────────────────────────────────────────────╯
 === BUILT PTB === 
Input 0: Pure([1, 0, 0, 0, 0, 0, 0, 0])
Input 1: Pure([2, 0, 0, 0, 0, 0, 0, 0])
Input 2: Pure([3, 0, 0, 0, 0, 0, 0, 0])
Input 3: Pure([4, 0, 0, 0, 0, 0, 0, 0])
Input 4: ImmutableOrOwnedObject
Input 5: ImmutableOrOwnedObject
Input 6: Pure([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1])
Input 7: Pure([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2])
Input 8: Pure([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1])
Input 9: Pure([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2])
Input 10: Pure([0])
Input 11: Pure([1, 1, 0, 0, 0, 0, 0, 0, 0])
Input 12: Pure([1, 1, 1, 0, 0, 0, 0, 0, 0, 0])
Command 0: MakeMoveVec(Someu64,[Input(0),Input(1),Input(2),Input(3)])
Command 1: MakeMoveVec(Someu64,[])
Command 2: MakeMoveVec(Some0x1::a::b,[Input(4),Input(5)])
Command 3: MakeMoveVec(Someaddress,[Input(6),Input(7)])
Command 4: MakeMoveVec(Somevector<address>,[Input(8),Input(9)])
Command 5: MakeMoveVec(Some0x1::option::Option<u64>,[Input(10),Input(10)])
Command 6: MakeMoveVec(Some0x1::option::Option<u64>,[Input(10),Input(10)])
Command 7: MakeMoveVec(Some0x1::option::Option<u64>,[Input(10),Input(11)])
Command 8: MakeMoveVec(Some0x1::option::Option<u64>,[Input(10),Input(12)])
Command 9: MakeMoveVec(Some0x2::coin::Coin<0x2::iota::IOTA>,[GasCoin])
