crates/iota/tests/snapshots/ptb_files_tests__merge_coins_invalid_args.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭─[3:1]
 2 │ --merge-coins @0x1
 3 │ --merge-coins @0x1 true
   · ──────┬──────
   ·       ╰── Expected '[' but found command '--merge-coins'
 4 │ --merge-coins @0x1 [true, false]
   ╰────

  × Error when processing PTB
   ╭─[3:20]
 2 │ --merge-coins @0x1
 3 │ --merge-coins @0x1 true
   ·                    ──┬─
   ·                      ╰── Expected '[' but found identifier 'true'
 4 │ --merge-coins @0x1 [true, false]
   ╰────

