crates/iota/tests/snapshots/ptb_files_tests__merge_coins_valid.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭──────────────────────────────────────────╮
│ PTB Preview                              │
├─────────────┬────────────────────────────┤
│ command     │ values                     │
├─────────────┼────────────────────────────┤
│ split-coins │ gas [1, 2, 3]              │
│ assign      │ coins                      │
│ assign      │ c0 coins.0                 │
│ assign      │ c1 coins.1                 │
│ assign      │ c2 coins.2                 │
│ merge-coins │ c0 [c1, c2]                │
│ merge-coins │ gas [c0]                   │
│ split-coins │ gas [1, 2, 3]              │
│ assign      │ coins                      │
│ merge-coins │ coins.0 [coins.1, coins.2] │
│ merge-coins │ gas [coins.0]              │
╰─────────────┴────────────────────────────╯
 === BUILT PTB === 
Input 0: Pure([1, 0, 0, 0, 0, 0, 0, 0])
Input 1: Pure([2, 0, 0, 0, 0, 0, 0, 0])
Input 2: Pure([3, 0, 0, 0, 0, 0, 0, 0])
Command 0: Command: Split Coins
├── Coin: Gas
└── Amounts
    ├── 0: Input(0)
    ├── 1: Input(1)
    └── 2: Input(2)
Command 1: Command: Merge Coins
├── Coin: NestedResult(0, 0)
└── Coins To Merge
    ├── 0: NestedResult(0, 1)
    └── 1: NestedResult(0, 2)
Command 2: Command: Merge Coins
├── Coin: Gas
└── Coins To Merge
    └── 0: NestedResult(0, 0)
Command 3: Command: Split Coins
├── Coin: Gas
└── Amounts
    ├── 0: Input(0)
    ├── 1: Input(1)
    └── 2: Input(2)
Command 4: Command: Merge Coins
├── Coin: NestedResult(3, 0)
└── Coins To Merge
    ├── 0: NestedResult(3, 1)
    └── 1: NestedResult(3, 2)
Command 5: Command: Merge Coins
├── Coin: Gas
└── Coins To Merge
    └── 0: NestedResult(3, 0)
