crates/iota/tests/snapshots/ptb_files_tests__move_call.ptb.snap
---
source: crates/iota/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === PREVIEW === 
╭────────────────────────────────────────────────╮
│ PTB Preview                                    │
├───────────────┬────────────────────────────────┤
│ command       │ values                         │
├───────────────┼────────────────────────────────┤
│ assign        │ a none                         │
│ make-move-vec │ <0x1::option::Option<u64>> [a] │
│ move-call     │ 0x1::option::is_none<u64> a    │
│ assign        │ a none                         │
│ move-call     │ 0x1::option::is_none<u64> none │
│ assign        │ a none                         │
│ move-call     │ 0x1::option::is_none<u64> a    │
╰───────────────┴────────────────────────────────╯
 === BUILT PTB === 
Input 0: Pure([0])
Command 0: Command: Make Move Vector
├── Type: 0x1::option::Option<u64>
└── Elements
    └── 0: Input(0)
Command 1: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000001
├── Module: option
├── Function: is_none
├── Type Arguments
│   └── 0: u64
└── Arguments
    └── 0: Input(0)
Command 2: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000001
├── Module: option
├── Function: is_none
├── Type Arguments
│   └── 0: u64
└── Arguments
    └── 0: Input(0)
Command 3: Command: Move Call
├── Package: 0x0000000000000000000000000000000000000000000000000000000000000001
├── Module: option
├── Function: is_none
├── Type Arguments
│   └── 0: u64
└── Arguments
    └── 0: Input(0)
